<resources>
    <string name="app_name">robeBookodemia</string>
    <string name="txtWelcome">¡Bienvenido!</string>
    <string name="txtLogin">INICIAR SESIÓN</string>
    <string name="txtNoRegister">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="txtUser">Usuario</string>
    <string name="txtEmail">Correo</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtConfirmPassword">Confirma Contraseña</string>
    <string name="txtHeadingRegister">Registra tu información</string>
    <string name="txtNewAccount">Crear Cuenta</string>
    <string name="txtNewAccountDes">Estas a unos cuantos pasos de vivir la mejor experiencia</string>
    <string name="txtBack">Regresar</string>
    <string name="txtLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, tas fringilla. Adipiscing elit pellentesque habitant morbi tristique senectus et. Egestas maecenas pharetra convallis posuere morbi</string>
    <string name="banner">banner</string>
    <string name="error_empty">Se necesita este campo</string>
    <string name="error_invalid_email">Correo Inválido</string>

    <!--SharedPreferences-->
    <string name="name_file_preferences">com.txl.abx.desafio.sharepreferences</string>

    <!--keys de API-->
    <string name="key_token">plain-text-token</string>

    <!--Métdos de API-->
    <string name="api_login">login</string>
    <string name="api_libros">books</string>
    <string name="api_registro">register</string>

    <!--String para item de book-->
    <string name="tv_titulo">Titulo: %s</string>
    <string name="tv_content">Content: %s</string>
    <string name="tv_type">Type: %s</string>
    <string name="tv_link">Link: %s</string>

    <!--Errores-->
    <string name="error_internet">Ups! no estas conectado a internet</string>
    <string name="campo_vacio">Campo vacio</string>
    <string name="error_correo">Correo no valido</string>

    <string name="tv_iniciar_sesion">Iniciar sesión</string>
    <string name="hint_correo">Ingresa tu correo</string>
    <string name="hint_contrasena">Ingresa tu contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="api_logout">logout</string>
    <string name="tv_registro">Registro</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_registro_contrasena">Contraseña</string>
    <string name="hint_registro_contrasena_dos">Confirmar contraseña</string>
    <string name="btn_registrar">Registrar</string>
    <string name="tv_cuenta">¿No tienes cuenta?</string>
    <string name="tv_registro_aqui">Registrate aquí</string>
    <string name="error_different_pass">Diferentes Contraseñas</string>
    <string name="txt_hello">Hola</string>
    <string name="populares">Más populares</string>
    <string name="books">Libros</string>
    <string name="categories">Categorías</string>
    <string name="author">Autores</string>
    <string name="recently_added">Recién agregados</string>
    <string name="img_populares">Libros mas populares</string>
    <string name="by_author">by %s</string>

</resources>