<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".User">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerConstraint_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/sv_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image_home_banner"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/banner"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/banner" />

                    <TextView
                        android:id="@+id/text_home_hola"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-14dp"
                        android:text="@string/txt_hello"
                        android:textColor="@color/blue_900"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/text_home_nombre"
                        app:layout_constraintStart_toStartOf="@id/text_home_nombre"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/text_home_nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="-4dp"
                        android:text="@string/txtUser"
                        android:textColor="@color/blue_900"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/image_home_banner"
                        app:layout_constraintStart_toStartOf="@id/image_home_banner" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:dividerColor="@color/blue_900"
                        app:dividerThickness="4dp"
                        app:layout_constraintBottom_toBottomOf="@id/image_home_banner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/text_mas_populares"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/populares"
                    android:textAlignment="center"
                    android:textColor="@color/blue_700"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    tools:ignore="TextContrastCheck" />

                <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                    android:id="@+id/recycler_populares"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_mas_populares" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_home_filtros"
                    style="?attr/materialCardViewElevatedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_populares">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_home_libros"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/books"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:layout_marginVertical="12dp"
                            android:background="@color/blue_900"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/button_home_libros"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_home_categoria"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/categories"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toStartOf="@id/button_home_autores"
                            app:layout_constraintStart_toEndOf="@+id/button_home_libros"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:layout_marginVertical="12dp"
                            android:background="@color/blue_900"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/button_home_categoria"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_home_autores"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/author"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/button_home_categoria"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/text_home_recien_agregados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="12dp"
                    android:text="@string/recently_added"
                    android:textColor="@color/blue_700"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardView_home_filtros"
                    tools:ignore="TextContrastCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_libros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/layout_animation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_home_recien_agregados" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="408dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:itemIconTint="@color/blue_900"
            app:itemTextColor="@color/blue_900"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


